# WebScrapper

./: Cargo.toml
python/: Youtube.py  main.py
src/: _File.rs  main.rs
src/_Import/: _Date.rs  _Server.rs  mod.rs
src/_Import/_NaverNewsApis/: _NewsDb.rs  mod.rs
src/_Import/_NaverNewsApis/_NaverNews/: _Article.rs  _ArticleLocalApi.rs  mod.rs  (+4 more)
src/_Import/_StockApis/: _Db.rs  _EStock.rs  _LocalApi.rs  _Scraper.rs  _StockPrice.rs  mod.rs
src/_Import/_WeatherAPis/: _EDay.rs  _EWeather.rs  _Weather.rs  _WeatherDb.rs  _WeatherLocalApi.rs  mod.rs
static/: HttpClient.js  component.css  component.js  index.html  news.html
static/component/InvestingCom/: Logo.js
static/component/NaverFinance/: Logo.js
static/component/NaverNews/: News.js  NewsCard.js  NewsSection.js
static/component/TraidingView/: Logo.js
static/component/WeatherGoKr/: WeatherCard.js
static/component_InvestingCom/: Logo.js
static/component_naverNews/: News.js  NewsSection.js
static/component_news/: NewsCard.js  NewsSection.js
static/component_stockChart/: StockChart.js
static/component_weather/: WeatherCard.js
static/component_weatherGoKr/: WeatherCard.js
static/css/: component.css  fontsize.css  height.css  margin.css  overflow.css  padding.css
static/page/AutoTools/: AutoTools.js
static/page/component/: MenuItem.js  TopMenu.js
static/page/dailyReport/: DailyReport.js  index.html
static/page/index/: index.html
static/page/tools/: index.html
static/page_index/: StockChart.js  index.css  index.html  index_news.js  index_stock.js  index_stockChart.js  index_weather.js
(+13 files in other folders)
