[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

[dependencies]

#async runtime
tokio = { version = "1.40.0", features = ["full"] }

# Html Parsing
reqwest = { version = "0.12.8", features = ["json"] }
scraper = "0.20.0"

# Json
serde_json = "=1.0.128"
serde = { version = "1.0", features = ["derive"] }

# Time
chrono = "0.4.38"

# Sqlite
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Web Server
actix-web = "4.9.0"
actix-files = "0.6.6"
